gentoo init.d: remove MIGRATE_MODULES on openvz stop
at gentoo start/stop script the MIGRATE_MODULES are not removing on
/etc/init.d/vz stop.

http://bugzilla.openvz.org/500

--- a/etc/init.d/vz-gentoo.in
+++ b/etc/init.d/vz-gentoo.in
@@ -295,6 +295,10 @@ stop() {
 	remove_cron
 	stop_net
 
+	for mod in ${MIGRATE_MODULES}; do
+		/sbin/modprobe -r ${mod} > /dev/null 2>&1
+	done
+
 	for mod in ${MODULES}; do
 		/sbin/modprobe -r ${mod} > /dev/null 2>&1
 	done
