init.d/vz-redhat: do not leave stale vz_lock files
In case lockfile function performed fine, but later on the 'vz start' stage
something has failed, lock file is not removed. This added trap fixes that
problem in the most straightforward way. ;)

Problem discovered while running /etc/init.d/vz start on a non-OpenVZ kernel.

--- a/etc/init.d/vz-redhat.in
+++ b/etc/init.d/vz-redhat.in
@@ -385,6 +385,8 @@ lockfile()
         local TEMPFILE="${1}.$$"
         local LOCKFILE="${1}"
 
+	trap -- "rm -f ${LOCKFILE} ${TEMPFILE}" EXIT
+
         echo $$ > ${TEMPFILE} 2> /dev/null || {
 		echo "Can't write to ${TEMPFILE}"
         }
