init.d/vz: fix 'status' command
and then

shows that OpenVZ is running! This patch fixes it

http://bugzilla.openvz.org/501

[kir@openvz.org: extracted from Thorsten's patch]

--- a/etc/init.d/vz-redhat.in
+++ b/etc/init.d/vz-redhat.in
@@ -180,7 +180,7 @@ __echo()
 status()
 {
 	local base=${0##*/}
-	if get_veinfo; then
+	if get_veinfo && [ -f $SUBSYS_VZ ]; then
 		echo "OpenVZ is running..."
 		return 0
 	else
