vzsplit: fix hardcoded /vz and warning on reiserfs
vzsplit used hardcoded /vz path to check disk space.
This patch makes it use VE_PRIVATE from global VZ config file.

http://bugzilla.openvz.org/416

The other issue fixed in this patch is the following warning:
 WARNING: Recommended minimal size of /vz partition is 20Gb!
which is printed when /vz is residing on reiserfs.
This is because reiserfs reports 0 inodes.

http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=415645
http://openvz.org/pipermail/debian/2007-March/000136.html

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -61,3 +61,4 @@ vzmemcheck_SOURCES = validate.c \
 vzmemcheck_LDADD = $(VZCTL_LIBS)
 
 vzsplit_SOURCES = vzsplit.c
+vzsplit_LDADD   = $(VZCTL_LIBS)
