init.d/vz-redhat: add checking for OpenVZ kernel
The check if kernel running is OpenVZ enabled is done
in start() and status().

[kir@: changelog, patch split, remove unused local from status()]

http://bugzilla.openvz.org/501

--- a/etc/init.d/vz-redhat.in
+++ b/etc/init.d/vz-redhat.in
@@ -128,6 +128,14 @@ remove_cron()
 EOF
 }
 
+check_kernel()
+{
+	if ! [ test -d /proc/vz ]; then
+		print_failure "Running kernel is not OpenVZ kernel."
+		exit 1
+	fi
+}
+
 get_parallel()
 {
 	[ -n "${PARALLEL}" ] && return
@@ -181,7 +189,8 @@ __echo()
 
 status()
 {
-	local base=${0##*/}
+	check_kernel
+
 	if get_veinfo && [ -f $SUBSYS_VZ ]; then
 		echo "OpenVZ is running..."
 		return 0
@@ -433,6 +442,8 @@ start()
 	local velist
 	local msg
 	local mod
+
+	check_kernel
 
 	if ! lockfile $LOCKFILE; then
 		__echo "OpenVZ is locked"
