--- a/etc/init.d/vz-redhat.in
+++ b/etc/init.d/vz-redhat.in
@@ -136,6 +136,29 @@ check_kernel()
 	fi
 }
 
+check_kernel_config()
+{
+	test -r /proc/config.gz || return 0
+
+	local conf opt err=0
+	local opt_must="SIM_FS VE VE_CALLS VZ_GENCALLS VZ_DEV"
+#	local opt_rec="SCHED_VCPU FAIRSCHED VZ_QUOTA VZ_QUOTA_UGID VE_NETDEV VE_ETHDEV
+#			VE_IPTABLES VZ_CHECKPOINT VZ_WDOG"
+
+	conf=$(zcat /proc/config.gz 2>/dev/null | grep -E -v '^#|^$') || return 0
+
+	for opt in opt_must; do
+		if ! echo "$conf" | grep -q "${opt}="; then
+			__echo "Missing kernel config option: CONFIG_$opt"
+			err=1
+		fi
+	done
+	if [ err != 0 ]; then
+		print_failure "Please recompile your kernel."
+		exit 1
+	fi
+}
+
 get_parallel()
 {
 	[ -n "${PARALLEL}" ] && return
@@ -444,6 +467,7 @@ start()
 	local mod
 
 	check_kernel
+	check_kernel_config
 
 	if ! lockfile $LOCKFILE; then
 		__echo "OpenVZ is locked"
