--- a/etc/init.d/vz-redhat.in
+++ b/etc/init.d/vz-redhat.in
@@ -141,7 +141,7 @@ EOF
 
 check_kernel()
 {
-	if ! [ test -d /proc/vz ]; then
+	if ! test -d /proc/vz ; then
 		print_failure "Running kernel is not OpenVZ kernel."
 		exit 1
 	fi
