vzcpucheck: correct a typo
vzcpucheck node power has a minor inconsistency because the following line has
a typo:

        if ($1 == "bogomips" || $1 = "BogoMIPS") {

of course, it should be:

        if ($1 == "bogomips" || $1 == "BogoMIPS") {

http://bugzilla.openvz.org/540

[kir@openvz.org: not a bug since all modern kernels print it in lowercase]

--- a/bin/vzcpucheck.in
+++ b/bin/vzcpucheck.in
@@ -46,7 +46,7 @@ fi
 
 CPUUTL=`cat  ${CPUINFO} | awk '
 {
-	if ($1 == "bogomips" || $1 = "BogoMIPS") {
+	if ($1 == "bogomips" || $1 == "BogoMIPS") {
 		sum += $3;
 	}
 }
