vzctl: delete IPv6 route from host system after VE stop
Before this patch, the following problem occured:

VE assigned IP(v6) fc00::1, after stopping it, the VE IP(v6) route exist

fc00::1 dev venet0  metric 1024  expires 21333737sec mtu 1500 advmss 1440 hoplimit 4294967295

http://bugzilla.openvz.org/587

--- a/scripts/vps-functions.in
+++ b/scripts/vps-functions.in
@@ -202,7 +202,7 @@ function vzaddrouting()
 #   $1 - IP address
 function vzdelrouting()
 {
-if ${IP_CMD} route list $1 | grep  "$1 dev venet0" >/dev/null 2>&1; then
+if ${IP_CMD} route list table all $1 | grep  "$1 dev venet0" >/dev/null 2>&1; then
 	${IP_CMD} route del $1 dev venet0 || \
 		vzwarning "Unable to del route ${IP_CMD} route del $1 dev venet0"
 fi
