configure: check for either ppc64 or powerpc64
Christian Kaiser reports that on his PPC box build_cpu is set to 'powerpc64'.
On the machine I used it was ppc64. So we should check for both.

See http://forum.openvz.org/index.php?t=tree&goto=13241&#msg_13241

--- a/configure.ac
+++ b/configure.ac
@@ -58,7 +58,7 @@ AC_C_INLINE
 CFLAGS="${CFLAGS} -Wall -Wpointer-arith -Wcast-qual -Winline"
 CFLAGS="${CFLAGS} -Wcast-align -Wno-unused-parameter"
 
-if test x$build_cpu = xppc64; then
+if test x$build_cpu = xppc64 -o x$build_cpu = xpowerpc64; then
 	CFLAGS="${CFLAGS} -m64"
 fi
 
