etc/init.d/vz-redhat: add processing of multiple cron files
Idea and the first patch from Thorsten Schifferdecker <curx@openvz.org>:
> enable crontabs related to OpenVZ, like checking /proc/user_beancouters or
> /proc/bc/*/ or backuping VE's.
> Files /etc/vz/cron/vz* build a general vz-crontab genvz, installed to
> /etc/cron.d/vz.
>
> i.e: checks /proc/user_beancouters with monbean.pl
>
> - add a crontab file to /etc/vz/cron/vzmonbean, with:
>
> # enable a 10min check of /proc/user_beancouters with monbean.pl
> */10 * * * * root /path/to/monbean.pl > /dev/null 2>&1
>
> - update OpenVZ cron settings, while OpenVZ is running!
> /etc/init.d/vz update-cron

[kir@: Patch rewritten to not generate temp file; some documentation updates]

http://bugzilla.openvz.org/599

--- a/etc/cron.d/vz.in
+++ b/etc/cron.d/vz.in
@@ -11,7 +11,8 @@
 # restarts.
 #
 # To make changes, edit the master copy @CRONDDIR@/vz
-# and then copy the file to @DST_CRONDDIR@/ (or restart vz service).
+# (or add your own @CRONDDIR@/vz* files)
+# and run /etc/init.d/vz update-cron.
 #
 # The reason this is done this way is because the OpenVZ cron job
 # should only be invoked if the vz service is enabled and not
