[IPv6] add ip6tables kernel modules in VE0, if IPV6 is enabled
If IPV6 is set to "yes", load a minimal set of ip6tables modules on VE0,
so a VE can use cmd ip6tables.

http://bugzilla.openvz.org/598

--- a/etc/vz.conf
+++ b/etc/vz.conf
@@ -29,7 +29,12 @@ DEF_OSTEMPLATE="fedora-core-4"
 
 ## Load vzwdog module
 VZWDOG="no"
-IPV6="no"
 
+## IPv4 iptables kernel modules
 IPTABLES="ipt_REJECT ipt_tos ipt_limit ipt_multiport iptable_filter iptable_mangle ipt_TCPMSS ipt_tcpmss ipt_ttl ipt_length"
 
+## Enable IPv6
+IPV6="no"
+
+## IPv6 ip6tables kernel modules
+IP6TABLES="ip6_tables ip6table_filter ip6table_mangle ip6t_REJECT"
