--- a/etc/init.d/vz-redhat.in
+++ b/etc/init.d/vz-redhat.in
@@ -68,6 +68,9 @@ if [ "${MODULES_DISABLED}" != "yes" ]; then
 		MODULES="${MODULES} vzwdog"
 	fi
 	IPT_MODULES="ip_tables ${IPTABLES} xt_tcpudp"
+	if [ "${IPV6}" = "yes" ]; then
+    		IPT_MODULES="${IPT_MODULES} ${IP6TABLES}"
+	fi
 	VZFS_MODULES="simfs"
 fi
 
