etc/init.d/vz-redhat: replace short ip cmd args with full ones
some "ip"-cmd are use in full other only short form, like:
 ip addr list <-> ip a l

Use long commands everywhere.

http://bugzilla.openvz.org/593

--- a/etc/init.d/vz-redhat.in
+++ b/etc/init.d/vz-redhat.in
@@ -272,7 +272,7 @@ start_net()
 {
 	local mod
 
-	if ip a l | grep -q "venet0:.*UP" 2>/dev/null; then
+	if ip addr list | grep -q "venet0:.*UP" 2>/dev/null; then
 		return 0
 	fi
 	# load all kernel modules needed for VE networking
@@ -302,7 +302,7 @@ stop_net()
 {
 	local mod
 
-	if ip a l | grep -q "venet0:.*UP" 2>/dev/null; then
+	if ip addr list | grep -q "venet0:.*UP" 2>/dev/null; then
 		__echo "Bringing down interface $VZDEV: "
 		ip link set $VZDEV down
 		print_result
