vzcpucheck: update header
update header of vzcpucheck -v

old: vpsid, units
to
new: VEID, CPUUNITS

http://bugzilla.openvz.org/show_bug.cgi?id=591

--- a/bin/vzcpucheck.in
+++ b/bin/vzcpucheck.in
@@ -83,8 +83,8 @@ BEGIN {
 		exit
 	}
 	if (verbose) {
-		print("vpsid\t\tunits");
-		print("-----------------------");
+		print("VEID\t\tCPUUNITS");
+		print("-------------------------");
 	}
 }
 {
