--- a/scripts/vps-functions.in
+++ b/scripts/vps-functions.in
@@ -93,7 +93,7 @@ function vzcheckvar()
 function vzgetnetdev()
 {
 	# Get a list of interfaces, excluding ones with LOOPBACK,
-	# NOARP, or SLAVE flags
+	# NOARP, SLAVE flags, or with names like eth0.5@eth0
 	NETDEVICES=`${IP_CMD} addr list | awk '
 	/^[0-9]+/ {
 		dev="";
@@ -104,7 +104,7 @@ function vzgetnetdev()
 	/^[\ \t]+inet / {
 		if (dev != "") print (dev);
 		dev="";
-	}' | sed 's/:$//'`
+	}' | grep -Fv '@' | sed 's/:$//'`
 }
 
 # Adds/deletes public ARP records for given IP for all interfaces
