arpsend: proper fix for VLAN interfaces
ip command lists VLAN interfaces in form of ethX.Y@ethX, but arpsend
(and other utilities) expects only ethX.Y so remove the part of VLAN
interface name starting from @.

The previous fix (commit 4db38b551a44019a4fced9abf23bd6e1531cef60) was
wrong -- we do not need to exclude VLAN interfaces, we need to process those
properly.

http://bugzilla.openvz.org/show_bug.cgi?id=617

--- a/scripts/vps-functions.in
+++ b/scripts/vps-functions.in
@@ -93,7 +93,7 @@ function vzcheckvar()
 function vzgetnetdev()
 {
 	# Get a list of interfaces, excluding ones with LOOPBACK,
-	# NOARP, SLAVE flags, or with names like eth0.5@eth0
+	# NOARP, or SLAVE flags
 	NETDEVICES=`${IP_CMD} addr list | awk '
 	/^[0-9]+/ {
 		dev="";
@@ -104,7 +104,7 @@ function vzgetnetdev()
 	/^[\ \t]+inet / {
 		if (dev != "") print (dev);
 		dev="";
-	}' | grep -Fv '@' | sed 's/:$//'`
+	}' | sed -e 's/:$//' -e 's/@.*$//'`
 }
 
 # Adds/deletes public ARP records for given IP for all interfaces
