--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -171,12 +171,12 @@ undo_root () {
 }
 
 undo_quota_init () {
-	$SSH "root@$host" "vzquota drop $VEID"
+	[ "${DISK_QUOTA}" != "no" ] && $SSH "root@$host" "vzquota drop $VEID"
 	undo_root
 }
 
 undo_quota_on () {
-	$SSH "root@$host" "vzquota off $VEID"
+	[ "${DISK_QUOTA}" != "no" ] && $SSH "root@$host" "vzquota off $VEID"
 	undo_quota_init
 }
 
@@ -411,20 +411,24 @@ if ! $SSH "root@$host" "mkdir -p $VE_PRIVATE"; then
 	exit $MIG_ERR_COPY
 fi
 
-log 1 "Initializing remote quota"
+if [ "${DISK_QUOTA}" != "no" ]; then
+	log 1 "Initializing remote quota"
 
-log 2 "Quota init"
-if ! $SSH "root@$host" "vzctl quotainit $VEID"; then
-	log 0 "Failed to initialize quota"
-	undo_root
-	exit $MIG_ERR_QUOTA
-fi
+	log 2 "Quota init"
+	if ! $SSH "root@$host" "vzctl quotainit $VEID"; then
+		log 0 "Failed to initialize quota"
+		undo_root
+		exit $MIG_ERR_QUOTA
+	fi
 
-log 2 "Turning remote quota on"
-if ! $SSH "root@$host" "vzctl quotaon $VEID"; then
-	log 0 "Failed to turn quota on"
-	undo_quota_init
-	exit $MIG_ERR_QUOTA
+	log 2 "Turning remote quota on"
+	if ! $SSH "root@$host" "vzctl quotaon $VEID"; then
+		log 0 "Failed to turn quota on"
+		undo_quota_init
+		exit $MIG_ERR_QUOTA
+	fi
+else
+	log 2 "VZ disk quota disabled -- skipping quota migration"
 fi
 
 log 1 "Syncing private"
@@ -490,29 +494,33 @@ if [ "$state" = "running" ]; then
 	fi
 fi
 
-log 1 "Syncing 2nd level quota"
+if [ "${DISK_QUOTA}" != "no" ]; then
+	log 1 "Syncing 2nd level quota"
 
-log 2 "Dumping 2nd level quota"
-time_quota=$(date +%s.%N)
-if ! vzdqdump $VEID -U -G -T > "$VE_QUOTADUMP"; then
-	log 0 "Failed to dump 2nd level quota"
-	undo_quota_dump
-	exit $MIG_ERR_QUOTA
-fi
+	log 2 "Dumping 2nd level quota"
+	time_quota=$(date +%s.%N)
+	if ! vzdqdump $VEID -U -G -T > "$VE_QUOTADUMP"; then
+		log 0 "Failed to dump 2nd level quota"
+		undo_quota_dump
+		exit $MIG_ERR_QUOTA
+	fi
 
-log 2 "Copying 2nd level quota"
-if ! logexec 2 $SCP $VE_QUOTADUMP root@$host:$VE_QUOTADUMP ; then
-	log 0 "Failed to copy 2nd level quota dump"
-	undo_quota_dump
-	exit $MIG_ERR_COPY
-fi
+	log 2 "Copying 2nd level quota"
+	if ! logexec 2 $SCP $VE_QUOTADUMP root@$host:$VE_QUOTADUMP ; then
+		log 0 "Failed to copy 2nd level quota dump"
+		undo_quota_dump
+		exit $MIG_ERR_COPY
+	fi
 
-log 2 "Load 2nd level quota"
-if ! $SSH "root@$host" "(vzdqload $VEID -U -G -T < $VE_QUOTADUMP && \
-		vzquota reload2 $VEID)"; then
-	log 0 "Failed to load 2nd level quota"
-	undo_copy_quota
-	exit $MIG_ERR_QUOTA
+	log 2 "Load 2nd level quota"
+	if ! $SSH "root@$host" "(vzdqload $VEID -U -G -T < $VE_QUOTADUMP && \
+			vzquota reload2 $VEID)"; then
+		log 0 "Failed to load 2nd level quota"
+		undo_copy_quota
+		exit $MIG_ERR_QUOTA
+	fi
+else
+	log 2 "VZ disk quota disabled -- skipping quota migration"
 fi
 
 if [ $online -eq 1 ]; then
