Fixed ip6 route removal
Removal of IPv6 route needs to be handled differently ('flush' instead of
'del') because (in some cases?) IPv6 route cache entry is created and it's
not enough to just remove the route -- we need to flush the cache as well.

Based on patch by Igor Sukhih <igor@openvz.org>

--- a/scripts/vps-functions.in
+++ b/scripts/vps-functions.in
@@ -202,8 +202,14 @@ function vzaddrouting()
 #   $1 - IP address
 function vzdelrouting()
 {
+	local arg
 	if ${IP_CMD} route list table all $1 | grep  "$1 dev venet0" >/dev/null 2>&1; then
-		${IP_CMD} route del $1 dev venet0 || \
-			vzwarning "Unable to del route ${IP_CMD} route del $1 dev venet0"
+		if [ "${1%%:*}" != "${1}" ]; then
+			arg="-6 route flush $1 dev venet0"
+		else
+			arg="route del $1 dev venet0"
+		fi
+		${IP_CMD} ${arg} || \
+			vzwarning "vzdelrouting: ${IP_CMD} ${arg} failed"
 	fi
 }
